--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,54 @@
 @charset "UTF-8";
 
-:root {
+/*
     --color1: (#733C3C);
     --color2: (#D9A577);
-}
+*/
 
 * {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/*CONFIGURAÇÕES BODY*/
+body, html {
+    background-color: #733C3C;
+    width: 100vw;
+    height: 100vh;
+}
+
+/*CONFIGURAÇÕES LOGIN*/
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    display: block;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.438);
+}
+
+/*CONFIGURAÇÕES DA IMAGEM*/
+section#login div#imagem {
+    background: #733C3C url(../media/back-pattern.jpg) no-repeat center center;
+    background-size: cover;
+    height: 200px;
+}
+
+/*CONFIGURAÇÕES DE FORMULÁRIO*/
+section#login div#form {
+    padding: 10px;
 }
