media query para outras telas

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.438);
+
+    transition: width .4s, height .4s;
+    transition-timing-function: ease;
 }
 
 /*CONFIGURAÇÕES DA IMAGEM*/
