--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,9 @@ section#login {
     transition: width .4s, height .4s;
     transition-timing-function: ease;
 }
-
+input#submit-input-login {
+    cursor: pointer;
+}
 /*CONFIGURAÇÕES DA IMAGEM*/
 section#login div#imagem {
     background: #733C3C url(../media/back-pattern.jpg) no-repeat center center;
@@ -54,4 +56,13 @@ section#login div#imagem {
 /*CONFIGURAÇÕES DE FORMULÁRIO*/
 section#login div#form {
     padding: 10px;
+}
+div#form h1 {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+div#form p {
+    font-size: 0.8em;
+    margin-bottom: 10px;
 }
