--- a/styles/style.css
+++ b/styles/style.css
@@ -43,9 +43,7 @@ section#login {
     transition: width .4s, height .4s;
     transition-timing-function: ease;
 }
-input#submit-input-login {
-    cursor: pointer;
-}
+
 /*CONFIGURAÇÕES DA IMAGEM*/
 section#login div#imagem {
     background: #733C3C url(../media/back-pattern.jpg) no-repeat center center;
@@ -64,5 +62,64 @@ div#form h1 {
 }
 div#form p {
     font-size: 0.8em;
-    margin-bottom: 10px;
+}
+form div.campo {
+    display: block;
+    width: 100%;
+    height: 35px;
+    border-radius: 3px;
+    margin: 5px 0px;
+
+    background-color: #582a2a;
+}
+div.campo label{
+    display: none;
+}
+div.campo span{
+    color: wheat;
+    padding: 5px;
+}
+div.campo input {
+    
+}
+
+/*BOTÕES DE LOGIN*/
+form input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+
+    background-color: #D9A577;
+    color: #582a2a;
+    border: 2px solid #582a2a;
+    border-radius: 3px;
+    margin-top: 10px;
+}
+form input[type=submit]:hover {
+    cursor: pointer;
+    background-color: #b87b47;
+}
+
+form a.botao {
+    text-align: center;
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+    padding-top: 3px;
+    
+    background-color: #D9A577;
+    color: #582a2a;
+    border: 2px solid #582a2a;
+    border-radius: 3px;
+    margin-top: 10px;
+    text-decoration: none;
+}
+form a.botao span{
+    font-size: 1em;
+}
+a.botao:hover {
+    cursor: pointer;
+    background-color: #b87b47;
 }
