--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,5 @@
 @charset "UTF-8";
 
-/*
-    --color1: (#733C3C);
-    --color2: (#D9A577);
-*/
-
 * {
     padding: 0px;
     margin: 0px;
@@ -20,7 +15,7 @@ body, html {
     height: 100vh;
 }
 
-/*CONFIGURAÇÕES LOGIN*/
+/*CONFIGURAÇÕES DA CAIXA DE LOGIN*/
 main {
     position: relative;
     width: 100vw;
@@ -30,16 +25,16 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     display: block;
 
     background-color: white;
     width: 260px;
-    height: 500px;
+    height: 465px;
     border-radius: 20px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.438);
 
+    transform: translate(-50%, -50%);
     transition: width .4s, height .4s;
     transition-timing-function: ease;
 }
@@ -67,8 +62,8 @@ form div.campo {
     display: block;
     width: 100%;
     height: 35px;
-    border-radius: 3px;
-    margin: 5px 0px;
+    border-radius: 6px;
+    margin: 3px 0px;
 
     background-color: #582a2a;
 }
@@ -77,10 +72,19 @@ div.campo label{
 }
 div.campo span{
     color: wheat;
-    padding: 5px;
+    font-size: 2em;
+    padding: 1px 0px 0px 5px;
+    width: 40px;
 }
 div.campo input {
-    
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+
+    border: 3px solid #582a2a;
+    border-radius: 6px;
+    padding: 5px;
+    transform: translateY(-9px);
 }
 
 /*BOTÕES DE LOGIN*/
